
Optimizations
---------------------
* GITHUB#15637: Lazily allocate ByteArrayDataInputs in SegmentTermsEnumFrame#15637 (Misha Dmitriev)

* GITHUB#15718 Skip per-document stored field reads on sorted indices when no stored fields are present (Francisco Fernández Castaño)

* GITHUB#15729: Lucene90DocValuesProducer is not prefetching any data for DocValueSkippers anymore (Alexander Reelsen)

Bug Fixes
---------------------
* GITHUB#15668: Fix UnsupportedOperationException in WeightedSpanTermExtractor by
  implementing getFieldInfos in DelegatingLeafReader. (Simranjeet Singh)

* GITHUB#15590: Fix race and improve performance of HNSW graph building (Viliam Durina)

* GITHUB#15702: Fix Potential NullPointException in BytesRefHash initialization#15702 (tyronecai)

* GITHUB#15731: Fix tessellator failure when a hole is touching another hole in the middle of a segment. In this case
  we might fail to detect it and choose a wrong bridge to eliminate the hole. (Ignacio Vera)

Other
---------------------
* GITHUB#15586: Document that scoring and ranking may change across major Lucene versions, and that applications requiring stable ranking should explicitly configure Similarity. (Parveen Saini)

* GITHUB#15764: Added simpler TestTesselator test in support of fix GITHUB#15731. (Craig Taverner)

======================= Lucene 10.4.0 =======================

API Changes
---------------------
* GITHUB#15497: Singleton for MatchAllDocsQuery & MatchNoDocsQuery. (hossman)

* GITHUB#15149: Introduce NumericDocValues#longValues to help speed up the
  retrieval of many doc values at once. (Adrien Grand)

* GITHUB#15173: Introduce DocIdStream#intoArray to help collect batches of doc
  IDs at once, in particular by taking advantage of the new
  NumericDocValues#longValues API. (Adrien Grand)

* GITHUB#15234: Remove unused method which does unsafe XML parsing.
  (Uwe Schindler, Isaac David)

* GITHUB#14515: IndexWriter.forceMergeDeletes() now returns MergePolicy.MergeObserver,